<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <!--group 表示一个组    checkableBehavior="single" 表示单选-->
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@mipmap/ic_profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_people"
            android:icon="@mipmap/ic_people"
            android:title="@string/people" />
        <item
            android:id="@+id/nav_locations"
            android:icon="@mipmap/ic_place"
            android:title="@string/place" />
        <item
            android:id="@+id/nav_events"
            android:icon="@mipmap/ic_events"
            android:title="@string/events" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@mipmap/ic_settings"
            android:title="@string/settings" />
    </group>
</menu>